# airbnb_clone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr.yml  pylint.yml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details_and_more.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_perks.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py
(+15 files in other folders)
